# patient-appt-demo

./: .env-example  README.md  TODO.txt  Thoughts_On_Exercise.md  docker-compose.yml
db/: README.md  init.sql
panda-app/: Dockerfile  README.md  pyproject.toml
panda-app/api/: main.py  openapi.json
panda-app/api/common/: consts.py  nhs_number_validator.py  postcode_formatter.py
panda-app/api/common/exceptions/: custom_exception_wrapper.py  custom_exceptions.py
panda-app/api/entity/: Patient.py  PatientUpdate.py
panda-app/api/mapper/: patient_mapper.py
panda-app/api/repository/: db_setup.py  patient_repository.py
panda-app/api/repository/model/: Patient.py  PatientModel.py
panda-app/api/router/: patients.py
panda-app/api/routers/: patients.py
panda-app/api/service/: base_service.py  patient_service.py
panda-app/integration-tests/: README.md
